Fix issues with disabled link on mobile and some style fix

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -255,6 +255,7 @@ ul {
   line-height: 1.5rem;
   letter-spacing: 0;
   color: rgb(255 255 255);
+  margin: 0;
 }
 
 .copyright-section {
